# HS-flybywire

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  CMakeLists-A319.txt  CMakeLists-A320.txt  CMakeLists.txt  Cargo.toml  Cargo_a318.toml  Cargo_a319.toml  Cargo_a320.toml  Cargo_a321.toml  README.md  a318ceo-igniter.config.mjs  a319ceo-igniter.config.mjs  a320ceo-igniter.config.mjs  a321neo-igniter.config.mjs  build-utils.js  igniter.config.mjs  jest.config.js  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: dev-a318ceo.yml  dev-a319ceo.yml  dev-a320ceo.yml  dev-a321neo.yml  dev.yml  eval.yml  main.yml  release-a318ceo.yml  release-a319ceo.yml  release-a320ceo.yml  release-a321neo.yml  release.yml
fbw-a21n/src/: README.md
fbw-a21n/src/base/: manifest-base.json
fbw-a21n/src/behavior/: build.js
fbw-a21n/src/model/: models.json
fbw-a21n/src/wasm/systems/a21n_systems_wasm/: Cargo.toml
fbw-a21n/src/wasm/systems/a21n_systems_wasm/src/: lib.rs
fbw-a318/src/: README.md
fbw-a318/src/base/: manifest-base.json
fbw-a318/src/behavior/: build.js
fbw-a318/src/model/: models.json
fbw-a318/src/wasm/systems/a318_systems_wasm/: Cargo.toml
fbw-a318/src/wasm/systems/a318_systems_wasm/src/: lib.rs
fbw-a319/src/: README.md
fbw-a319/src/behavior/: build.js
fbw-a319/src/wasm/systems/a319_systems_wasm/: Cargo.toml
fbw-a319/src/wasm/systems/a319_systems_wasm/src/: lib.rs
hsim-a318ceo/: .env  mach.config.js
hsim-a318ceo/src/wasm/: CMakeLists.txt
hsim-a318ceo/src/wasm/extra-backend-a32nx/: build.sh
hsim-a318ceo/src/wasm/fadec_a318cfm/: build.sh
hsim-a318ceo/src/wasm/fadec_a318cfm/src/: EngineControl.h  RegPolynomials.h  SimVars.h
hsim-a318ceo/src/wasm/fbw_a320/: build.sh
hsim-a318ceo/src/wasm/flypad-backend/: build.sh
hsim-a318ceo/src/wasm/systems/a320_systems/src/: air_conditioning.rs
hsim-a318ceo/src/wasm/systems/a320_systems/src/airframe/: mod.rs
hsim-a318ceo/src/wasm/systems/a320_systems/src/fuel/: mod.rs  test.rs
hsim-a318ceo/src/wasm/systems/a320_systems/src/payload/: mod.rs
hsim-a319ceo/: .env  mach.config.js
hsim-a319ceo/project/: HorizionSimulationsA319ceo.locProj
hsim-a319ceo/src/wasm/: CMakeLists.txt
hsim-a319ceo/src/wasm/extra-backend-a32nx/: build.sh
hsim-a319ceo/src/wasm/fadec_a319cfm/: build.sh
hsim-a319ceo/src/wasm/fadec_a319cfm/src/: EngineControl.h  RegPolynomials.h
hsim-a319ceo/src/wasm/fadec_a319iae/: build.sh
hsim-a319ceo/src/wasm/fadec_a319iae/src/: RegPolynomials.h
hsim-a319ceo/src/wasm/fbw_a320/: build.sh
hsim-a319ceo/src/wasm/flypad-backend/: build.sh
hsim-a319ceo/src/wasm/systems/a320_systems/src/: air_conditioning.rs
hsim-a319ceo/src/wasm/systems/a320_systems/src/airframe/: mod.rs
hsim-a319ceo/src/wasm/systems/a320_systems/src/fuel/: mod.rs
hsim-a319ceo/src/wasm/systems/a320_systems/src/payload/: mod.rs  test.rs
hsim-a319ceo/src/wasm/systems/a320_systems_wasm/src/: lib.rs
hsim-a320ceo/: mach.config.js
hsim-a320ceo/src/wasm/: CMakeLists.txt
hsim-a320ceo/src/wasm/extra-backend-a32nx/: build.sh
hsim-a320ceo/src/wasm/fadec_a320_cfm/src/: SimVars.h
hsim-a320ceo/src/wasm/fadec_a320cfm/: build.sh
hsim-a320ceo/src/wasm/fadec_a320cfm/src/: EngineControl.h  RegPolynomials.h
hsim-a320ceo/src/wasm/fadec_a320iae/: build.sh
hsim-a320ceo/src/wasm/fadec_a320iae/src/: EngineControl.h  RegPolynomials.h
hsim-a320ceo/src/wasm/fbw_a320/: build.sh
hsim-a320ceo/src/wasm/fbw_a320/src/: FlyByWireInterface.cpp
hsim-a320ceo/src/wasm/flypad-backend/: build.sh
hsim-a320ceo/src/wasm/systems/a320_systems/: Cargo.toml
hsim-a320ceo/src/wasm/systems/a320_systems/src/: air_conditioning.rs
hsim-a320ceo/src/wasm/systems/a320_systems/src/airframe/: mod.rs  test.rs
hsim-a320ceo/src/wasm/systems/a320_systems/src/fuel/: mod.rs
hsim-a320ceo/src/wasm/systems/a320_systems/src/payload/: mod.rs
hsim-a320ceo/src/wasm/systems/a320_systems_wasm/src/: lib.rs  payload.rs
hsim-a321neo/: mach.config.js
hsim-a321neo/project/: HorizionSimulationsA321neo.xml
hsim-a321neo/src/wasm/: CMakeLists.txt
hsim-a321neo/src/wasm/extra-backend-a32nx/: build.sh
hsim-a321neo/src/wasm/fadec_a320/: build.sh
hsim-a321neo/src/wasm/fadec_a320/src/: EngineControl.h  FadecGauge.h  RegPolynomials.h  SimVars.h
hsim-a321neo/src/wasm/fadec_a320leap/: build.sh
hsim-a321neo/src/wasm/fadec_a320leap/src/: EngineControl.h  FadecGauge.h  RegPolynomials.h  SimVars.h
hsim-a321neo/src/wasm/fadec_a320pw/: build.sh
hsim-a321neo/src/wasm/fadec_a320pw/src/: RegPolynomials.h  SimVars.h
hsim-a321neo/src/wasm/fbw_a320/: build.sh
hsim-a321neo/src/wasm/fbw_a320/src/model/: FacComputer.cpp  FacComputer_data.cpp
hsim-a321neo/src/wasm/flypad-backend/: build.sh
hsim-a321neo/src/wasm/systems/a320_systems/src/: air_conditioning.rs
hsim-a321neo/src/wasm/systems/a320_systems/src/airframe/: mod.rs
hsim-a321neo/src/wasm/systems/a320_systems/src/fuel/: mod.rs
hsim-a321neo/src/wasm/systems/a320_systems/src/hydraulic/: flaps_computer.rs
hsim-a321neo/src/wasm/systems/a320_systems/src/payload/: mod.rs
hsim-a321neo/src/wasm/systems/a320_systems_wasm/src/: lib.rs  payload.rs
hsim-a321neo/src/wasm/systems_lr/a320_systems/src/payload/: mod.rs
scripts/: build-a318hs.js  build-a318hs.sh  build-a319hs.js  build-a320hs.js  build-a321ec.js  build-a321ec.sh  build-a321hs.js  build-cmake.sh  build_a21n.js  build_a21n.sh  build_a318.js  build_a318hs.sh  build_a319.js  build_a319hs.sh  build_a320hs.sh  build_a321hs.sh  build_cmake_a318hs.sh  build_cmake_a319hs.sh  build_cmake_a320hs.sh  build_cmake_a321hs.sh  cdn.sh  cleanup.sh  copy_a318hs.sh  copy_a319hs.sh  copy_a320hs.sh  copy_a321ec.sh  copy_a321hs.sh  copy_common.sh  fragment-a318hs.js  fragment-a339x-liveries.js  fragment.js  fragment_a318ceo.js  fragment_a319ceo.js  fragment_a320ceo.js  fragment_a321neo.js  install-source-a318ceo.js  install-source-a319ceo.js  install-source-a320ceo.js  install-source-a321neo.js  install-source-a339x-liveries.js  (+8 more)
tools/: MOI_Airbus_A32X_family.xlsx
(+1630 files in other folders)
