[package]
name = "a21n_systems_wasm"
version = "0.1.0"
authors = ["FlyByWire Simulations"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
test = false

[dependencies]
uom = "0.33.0"
a21n_systems = { path = "../a21n_systems" }
systems = { path = "../../../../../fbw-common/src/wasm/systems/systems" }
systems_wasm = { path = "../../../../../fbw-common/src/wasm/systems/systems_wasm" }
msfs = { git = "https://github.com/flybywiresim/msfs-rs", branch = "main" }
