[package]
name = "a318_systems_wasm"
version = "0.1.0"
authors = ["FlyByWire Simulations"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
test = false

[dependencies]
uom = "0.33.0"
a318_systems = { path = "../a318_systems" }
systems = { path = "../../../../../fbw-common/src/wasm/systems/systems" }
systems_wasm = { path = "../../../../../fbw-common/src/wasm/systems/systems_wasm" }
msfs = { git = "https://github.com/flybywiresim/msfs-rs", branch = "main" }
