[package]
name = "a319_systems_wasm"
version = "0.1.0"
authors = ["FlyByWire Simulations"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
test = false

[dependencies]
uom = "0.33.0"
a319_systems = { path = "../a319_systems" }
systems = { path = "../../../../../fbw-common/src/wasm/systems/systems" }
systems_wasm = { path = "../../../../../fbw-common/src/wasm/systems/systems_wasm" }
msfs = { git = "https://github.com/flybywiresim/msfs-rs", branch = "main" }
